# bookbot

./: .gitignore  Dockerfile  clear_bucket.sh  docker-compose.yml  main.py  pyproject.toml  stats.py
app/: __init__.py  server.py
app/core/: config.py
app/models/: db.py
app/routes/: jobs.py  upload.py
app/services/: auto_summarization.py  keyword_extraction.py  lexical_diversity.py  named_entity_recognition.py  readability.py  sentence_complexity.py  sentiment_analysis.py
app/utils/: file_check.py
app/workers/: celery_workers.py
routes/: jobs.py
