[project]
name = "wordlens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "nltk>=3.9.1",
    "psycopg2-binary>=2.9.10",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "textstat>=0.7.7",
    "uvicorn>=0.34.3",
    "spacy>=3.7.2",
    "rake-nltk>=1.0.6",
    "transformers>=4.41.2",
    "torch>=2.3.0",
    "pip>=25.1.1",
]
